segundo commit, corregido algunas cosas, se agrega array de objetos con funcion para crear html

--- a/index.html
+++ b/index.html
@@ -17,8 +17,16 @@
     <section class="hero">
         <h1>Sumate a la moda circular</h1>
     </section>
-    <section class="card-container">
-        card container <section></section>
+    <section class="main_card_container">
+        <section class="card-container">
+            <!-- <div class="card">
+                <h3>Benjamin</h3>
+                <img src="./vestidos/benjamin_m.jpg" class="img-vestido" alt="vestido">
+                <h4>Talle: M</h4>
+                <h4>Precio: xxxx</h4>
+                <button class="btn-reserva">Reservar</button>
+            </div> -->
+        </section>
     </section>
     <footer>
         <img src="./img/locker_blanco.png" alt="Locker" class="footer-logo">
