--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LOCKER | Moda Circular</title>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <nav>
         <img src="./img/locker_blanco.png" alt="Locker moda circular en Mendoza">
         <form class="buscador-container" role="search">
-            <input class="buscador-texto" type="search" placeholder="Buscar" aria-label="Buscar">
-            <button class="buscador-boton" type="submit">Buscar</button>
+            <input class="buscador-texto" type="search" placeholder="Buscar vestido por nombre" aria-label="Buscar">
+            <button class="checkout-boton" type="button">Ir a Checkout</button>
         </form>
     </nav>
     <section class="hero">
@@ -19,7 +20,7 @@
     </section>
     <section class="main_card_container">
         <section class="talle-filters">
-            <div>Talles:</div>
+            <div>Filtrar por talle:</div>
             <label><input type="checkbox" value="u"> Unico</label>
             <label><input type="checkbox" value="s"> S</label>
             <label><input type="checkbox" value="m"> M</label>
@@ -54,7 +55,7 @@
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d456.6237888213451!2d-68.84687759313452!3d-32.90329022963256!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x967e096302f63a91%3A0x6ee959a79d4a669e!2sLocker-%20Solucionamos%20tu%20Outfit%20para%20tu%20pr%C3%B3ximo%20evento!5e0!3m2!1ses-419!2sar!4v1709757674553!5m2!1ses-419!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </footer>
 
-
+    <script src="./js/main.js"></script>
+    
 </body>
-<script src="./js/main.js"></script>
 </html>
