se agrega funcionalidad de carrito y checkout, retoques css, nueva pagina de checkout

--- a/index.html
+++ b/index.html
@@ -5,14 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LOCKER | Moda Circular</title>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/stylemain.css">
 </head>
 <body>
     <nav>
         <img src="./img/locker_blanco.png" alt="Locker moda circular en Mendoza">
         <form class="buscador-container" role="search">
-            <input class="buscador-texto" type="search" placeholder="Buscar vestido por nombre" aria-label="Buscar">
-            <button class="checkout-boton" type="button">Ir a Checkout</button>
+        <input class="buscador-texto" type="search" placeholder="Buscar vestido por nombre" aria-label="Buscar">
         </form>
     </nav>
     <section class="hero">
@@ -44,6 +43,7 @@
         <ul id="listaCarrito">
         </ul>
         <div class="carrito-visible" id="total-carrito">0</div>
+        <a href="./pages/checkout.html" class="checkout-boton">Ir a Checkout</a>
         <button class="clear-carro" type="submit">Limpiar carrito</button>
       </section>
       
