ultimos retoques, listo para entrega final

--- a/index.html
+++ b/index.html
@@ -27,15 +27,7 @@
         </section>
 
         <section class="card-container">
-            <!-- Aca van las cards hechas con la funcion -->
-            <!-- card modelo para css
-             <div class="card">
-                <h3>vison</h3>
-                <img src="./vestidos/vison_s.jpg" class="img-vestido" alt="vestido">
-                <h4>Talle: s</h4>
-                <h4>Precio: 4800</h4>
-                <button class="btn-reserva" data-nombre="vison" data-precio="4800">Reservar</button>
-              </div> -->
+            <!-- aca  van las tarjetas -->
         </section>
     </section>
     <section class="carro-container">
